# fyrox_lite_lua

./: .gitignore  .gitmodules  App01.sln  Cargo.toml  LICENSE  README.md  api.lua  backlog.md  csgen.sh  dev.md  fyrox-lite.lua  fyrox_cs.sh  guards_cs.sh  known_issues.md  play_guards_lua.sh  rustfmt.toml
cs/App01/: App01.csproj  App01.sln  BlittableHelper.cs  FyroxC.cs  FyroxExecutor.cs  FyroxImpls.cs  FyroxLiteBindings.cs  FyroxLiteReferenceType.cs  FyroxManualBindings.cs  HelloScript.cs  NativeBool.cs  NativeClassId.cs  NativeColor.cs  NativeHandle.cs  NativeQuaternion.cs  NativeString.cs  NativeVector3.cs  ObjectRegistry.cs  Program.cs  PropertySetters.cs  TransientAttribute.cs  UserScript.cs  UserScriptMessage.cs  UuidAttribute.cs  run.sh
cs/FyroxLite/: FyroxExecutor.cs  FyroxLite.sln  decomposition.md
cs/cgen-lib/: Cargo.toml
cs/csgen-lib/: Cargo.toml
cs/csgen-lib/src/: lib.rs  rust_decl_to_cs.rs
cs/csgen-lib/src/lite_cgen/: engine_class.rs  enum_class.rs  mod.rs  simple_from.rs  struct_class.rs  types.rs
cs/csgen-lib/src/lite_csgen/: api_types.rs  engine_class.rs  enum_class.rs  gen_rs.rs  mod.rs  struct_class.rs  wrappers.rs  write_cs.rs
cs/fyrox-c/: Cargo.toml
cs/fyrox-c-lib/: Cargo.toml
cs/fyrox-c-lib/src/: arena.rs  bindings_lite_2.rs  bindings_manual.rs  buffer.rs  c_lang.rs  external_script_proxy.rs  fyrox_c_plugin.rs  internal_auto.rs  lib.rs  scripted_app.rs  string.rs  user_script_impl.rs
cs/fyrox-c/src/: arena.rs  auto_dispose.rs  bindings_lite.rs  bindings_lite_2.rs  bindings_manual.rs  c_lang.rs  editor_cs.rs  errors.rs  executor_cs.rs  external_script_proxy.rs  fyrox_c_plugin.rs  hello.rs  invoke_callback.rs  lib.rs  manual_bindings.rs  native_utils.rs  scripted_app.rs  string.rs  tracked.rs  user_script_impl.rs  utils.rs
cs/fyroxed-c/: Cargo.toml
data/: ball.rgs  block_16x4.rgs  guard_cylinder.rgs  guard_cylinder.rs.rgs  scene.rgs  scene2.rgs  square_ball.rgs
editor/: Cargo.toml
editor-lua/: Cargo.toml
editor/src/: main.rs
executor/: Cargo.toml
executor-android/: Cargo.toml
executor-android/src/: lib.rs
executor-lua/src/: main.rs
executor-wasm/: Cargo.toml
executor-wasm/src/: lib.rs
executor/src/: main.rs
fyrox-lite/: Cargo.toml  fyrox-lite.json  thoughts.md
fyrox-lite-api/: Cargo.toml
fyrox-lite-api/src/: lib.rs  lite_ctx.rs  lite_math.rs  lite_messages.rs  lite_node.rs  lite_physics.rs  lite_prefab.rs  lite_scene.rs  lite_ui.rs  lite_window.rs  script_context.rs  script_message_context.rs
fyrox-lite-color/: Cargo.toml
fyrox-lite-color/src/: domain.json  lib.rs  lite_color.rs
fyrox-lite-lua-bindings/: Cargo.toml
fyrox-lite-lua-bindings/src/: lib.rs
fyrox-lite-lua-generator/: Cargo.toml
fyrox-lite-lua-generator/src/: code_model.rs  context.rs  expressions.rs  generate_class_bindings.rs  generate_engine_class_bindings.rs  generate_enum_class_bindings.rs  generate_fields.rs  generate_methods.rs  generate_struct_class_bindings.rs  lib.rs  mlua_to_rust_expr.rs  templating.rs  type_to_mlua.rs
fyrox-lite-macro/: Cargo.toml
fyrox-lite-macro-lib/: Cargo.toml
fyrox-lite-macro-lib/src/: fyrox_lite.rs  fyrox_lite_engine_class.rs  fyrox_lite_pod.rs  lib.rs
fyrox-lite-macro/src/: lib.rs
fyrox-lite-math/: Cargo.toml
fyrox-lite-math/src/: domain.json  lib.rs  lite_math.rs  quat.rs  vec.rs
fyrox-lite-model/: Cargo.toml
fyrox-lite-model/src/: display.rs  lib.rs  named_value.rs
fyrox-lite-parser/: Cargo.toml
fyrox-lite-parser/src/: extract_engine_class.rs  extract_expression.rs  extract_pod_enum.rs  extract_pod_struct.rs  extract_ty.rs  generate_domain.rs  lib.rs  load_path.rs  resolve_classes.rs  visit_impl.rs  visit_struct.rs
fyrox-lite/src/: domain.json  externalizable.rs  lib.rs  lite_ctx.rs  lite_event.rs  lite_input.rs  lite_log.rs  lite_math.rs  lite_node.rs  lite_physics.rs  lite_plugin.rs  lite_prefab.rs  lite_scene.rs  lite_ui.rs  lite_window.rs  resource_registry.rs  script_context.rs  script_metadata.rs  script_object.rs  script_object_fyrox_traits.rs  script_object_residence.rs  spi.rs  user_types.rs
fyrox-lua/: Cargo.toml  known_issues.md
fyrox-lua-bindings/: Cargo.toml  known_issues.md
fyrox-lua-bindings/src/: debug.rs  fmt_pretty.rs  fyrox_lite.rs  fyrox_lite_class.rs  fyrox_utils.rs  lib.rs  lua_reflect_bindings.rs  lua_script.rs  lua_utils.rs  os_event.rs  plugin.rs  reflect_base_macro.rs  script.rs  script_class.rs  script_data.rs  script_def.rs  script_object.rs  typed_userdata.rs
fyrox-lua/src/: fyrox_lite.rs  fyrox_lite_class.rs  fyrox_lite_old.rs  lua_utils.rs  os_event.rs  plugin.rs  script.rs  script_class.rs  script_object.rs  typed_userdata.rs
game/: Cargo.toml  concept.md
game-dylib/: Cargo.toml
game-dylib/src/: lib.rs
game/src/: beacon.rs  bullet.rs  fyrox_utils.rs  game.rs  guard.rs  guard_chief.rs  lib.rs  player.rs  transient.rs
gen-common/: Cargo.toml
gen-common/src/: by_package.rs  code_model.rs  context.rs  fmt.rs  lib.rs  methods.rs  properties.rs  templating.rs
lite-macro/: Cargo.toml
lite-macro-lib/: Cargo.toml
lite-macro-lib/src/: fyrox_lite.rs  lib.rs
lite-macro/src/: lib.rs
lite-model/: Cargo.toml
lite-parser/: Cargo.toml
lua/executor-lua/: Cargo.toml
lua/executor-lua/src/: main.rs
lua/fyrox-lite-lua-generator/: Cargo.toml
lua/fyrox-lite-lua-generator/src/: context.rs  expressions.rs  generate_engine_class_bindings.rs  generate_enum_class_bindings.rs  generate_struct_class_bindings.rs  lib.rs
lua/fyrox-lua/: Cargo.toml
lua/fyrox-lua/src/: debug.rs  external_script_proxy.rs  fmt_pretty.rs  fyrox_lite.rs  fyrox_lite_old.rs  fyrox_lua_plugin.rs  fyrox_plugin.rs  fyrox_script.rs  lib.rs  lua_lang.rs  lua_lifecycle.rs  lua_script.rs  lua_script_metadata.rs  lua_utils.rs  manual_lua_bindings.rs  plugin.rs  script.rs  script_class.rs  script_data.rs  script_def.rs  script_metadata.rs  script_object.rs  script_object_fyrox_traits.rs  script_object_residence.rs  typed_userdata.rs  user_script_impl.rs
scripts/: Beacon.lua  Bullet.lua  Game.lua  Guard.lua  GuardChief.lua  Player.lua
tools/: Cargo.toml
tools/src/: lib.rs
(+346 files in other folders)
