
[workspace]
members = [ "editor", "editor-lua", "executor", "executor-lua", "fyrox-lite-api", "fyrox-lua-bindings", "game", "game-dylib"]
resolver = "2"
exclude = ["mlua"]

[workspace.dependencies]
fyrox = {git = "https://github.com/FyroxEngine/Fyrox", default-features = false, rev = "b0768290d37453bb589705a8d678ecb29afc346f"}
fyroxed_base = {git = "https://github.com/FyroxEngine/Fyrox", default-features = false, rev = "b0768290d37453bb589705a8d678ecb29afc346f"}
# fyrox = {path = "c:/dev/rust/Fyrox/fyrox", default-features = false}
# fyroxed_base = {path = "c:/dev/rust/Fyrox/editor", default-features = false}

# Separate build profiles for hot reloading. These profiles ensures that build artifacts for
# hot reloading will be placed into their own folders and does not interfere with standard (static)
# linking.
[profile.dev-hot-reload]
inherits = "dev"
[profile.release-hot-reload]
inherits = "release"

# Optimize the engine in debug builds, but leave project's code non-optimized.
# By using this technique, you can still debug you code, but engine will be fully
# optimized and debug builds won't be terribly slow. With this option, you can
# compile your game in debug mode, which is much faster (at least x3), than release.
[profile.dev.package."*"]
opt-level = 3
