
[workspace]
members = [ "editor", "executor", "fyrox-lite", "fyrox-lite-lua-generator", "fyrox-lite-macro", "fyrox-lite-macro-lib", "fyrox-lite-math", "fyrox-lite-model", "fyrox-lite-parser", "fyrox-lua"]
resolver = "2"
exclude = ["mlua"]

[workspace.dependencies]
fyrox = {git = "https://github.com/FyroxEngine/Fyrox", default-features = false, rev = "b0768290d37453bb589705a8d678ecb29afc346f"}
fyrox-core = {git = "https://github.com/FyroxEngine/Fyrox", default-features = false, rev = "b0768290d37453bb589705a8d678ecb29afc346f"}
fyroxed_base = {git = "https://github.com/FyroxEngine/Fyrox", default-features = false, rev = "b0768290d37453bb589705a8d678ecb29afc346f"}
# fyrox = {path = "c:/dev/rust/Fyrox/fyrox", default-features = false}
# fyroxed_base = {path = "c:/dev/rust/Fyrox/editor", default-features = false}
serde = "1.0.210"
serde_json = "1.0.128"
quote = "1.0.37"
proc-macro2 = "1.0.86"
syn = {version = "2.0.77", features = ["full", "extra-traits"]}
uuid = {version = "1.10.0", features = ["v4"]}
fyrox-lite-model = {path = "fyrox-lite-model"}
fyrox-lite-parser = {path = "fyrox-lite-parser"}
fyrox-lite-macro = {path = "fyrox-lite-macro"}
extend = "1.2.0"
convert_case = "0.6.0"
to_vec = "0.1.0"
fyrox-lite = {path = "fyrox-lite"}
mlua = { version = "0.9.1", features = ["luau"] }
# mlua = { path = "../mlua", features = ["luau"] }

# Separate build profiles for hot reloading. These profiles ensures that build artifacts for
# hot reloading will be placed into their own folders and does not interfere with standard (static)
# linking.
[profile.dev-hot-reload]
inherits = "dev"
[profile.release-hot-reload]
inherits = "release"

# Optimize the engine in debug builds, but leave project's code non-optimized.
# By using this technique, you can still debug you code, but engine will be fully
# optimized and debug builds won't be terribly slow. With this option, you can
# compile your game in debug mode, which is much faster (at least x3), than release.
[profile.dev.package."*"]
opt-level = 3
