[package]
name = "executor"
version = "0.1.0"
edition = "2021"

[dependencies]
fyrox = { workspace = true }
fyrox_no_lua = { path = "../game", optional = true }
puffin = {version = "0.19.0", optional = true}
puffin_http = {version = "0.16.0", optional = true}

[features]
default = ["fyrox_no_lua"]
dylib = ["fyrox/dylib"]
profiling = ["dep:puffin", "dep:puffin_http"]
