[package]
name = "fyrox-lite-macro-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
syn = {workspace = true}
quote = {workspace = true}
proc-macro2 = {workspace = true}
fyrox-lite-parser = {path = "../fyrox-lite-parser"}
fyrox-lite-model = {path = "../fyrox-lite-model"}
uuid = {workspace = true}