[package]
name = "fyrox-c"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["dylib"]

[dependencies]
fyrox = { workspace = true }
fyrox-lite = { workspace = true }
extend = { workspace = true }
to_vec = { workspace = true }
convert_case = { workspace = true }
send_wrapper = { workspace = true }
