[package]
name = "executor-lua"
version = "0.1.0"
edition = "2021"

[dependencies]
fyrox = { workspace = true }
fyrox-lua = { path = "../lua/fyrox-lua", optional = true }
puffin = { version = "0.19.0", optional = true }
puffin_http = { version = "0.16.0", optional = true }

[features]
default = ["fyrox-lua"]
dylib = ["fyrox/dylib"]
profiling = ["dep:puffin", "dep:puffin_http"]
