[package]
name = "fyrox-lua"
version = "0.1.0"
edition = "2021"

[dependencies]
fyrox-lite = { workspace = true }
fyrox-lite-math = { workspace = true }
fyrox = { workspace = true }
mlua = { workspace = true }
send_wrapper = { workspace = true }
extend = "1.2.0"
convert_case = "0.6.0"

[features]
default = ["fyrox/default"]
dylib-engine = ["fyrox/dylib"]
